fixed vertical align on FF

--- a/Resources/public/scss/modules/universal-discovery/_sort.switcher.scss
+++ b/Resources/public/scss/modules/universal-discovery/_sort.switcher.scss
@@ -14,6 +14,8 @@
     .c-menu-button {
         position: relative;
         padding: 0 calculateRem(18px);
+        display: flex;
+        align-items: center;
 
         &--selected::after {
             content: '';
